<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Welcome</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_show">Show</string>
    <string name="button_activity">Start Activity!</string>
    <string name="myText">Me!!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!!!!</string>
    <string name="title_activity_show_card">ShowCard</string>
    <string name="title_activity_example_sports">ExampleSportsActivity</string>

</resources>
